[UPDATE] Login Page Creation

--- a/ACM_General/core/templates/base.html
+++ b/ACM_General/core/templates/base.html
@@ -31,7 +31,7 @@
             {% block head_stylesheets %}
             {% endblock %}
 
-            <title>{% block head_title %} ACM-General {% endblock %}</title>
+            {% block head_title %} <title> ACM-General </title> {% endblock %}
         {% endblock %}
 
         {% block head_main %}
