[UPDATE] Attempting to fix floating nav bar

--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -50,4 +50,9 @@
                 </div>
             </div>
         <div class="sig-section">
+  	    {% block body_sciprts %}
+	        {{ block.super }} 
+	    {% endblock %}
+	</div>
+			
 {% endblock %}
