--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -1,7 +1,7 @@
 {% extends 'home/base.html' %}
 
-{% block body_main %}
-        <div class="main-section">
+{% block body_mian %}
+	<div class="main-section">
             <div class="content-wrapper">
 
             </div>
@@ -50,9 +50,70 @@
                 </div>
             </div>
         <div class="sig-section">
-  	    {% block body_sciprts %}
-	        {{ block.super }} 
-	    {% endblock %}
-	</div>
-			
+            <div class="sig-section-header">
+                <h2>Check out the Special Interest Groups.</h2>
+            </div>
+            <div class="sig-section-body">
+                <div class="sig-link-card">
+                    <a class="sig-link" href="#">
+                        <!--<img src="">-->
+                    </a>
+                    <h3>ACM-W</h3>
+                </div>
+                <div class="sig-link-card">
+                    <a class="sig-link" href="#">
+                        <!--<img src="">-->
+                    </a>
+                    <h3>SIG-Comp</h3>
+                </div>
+                <div class="sig-link-card">
+                    <a class="sig-link" href="#">
+                        <!--<img src="">-->
+                    </a>
+                    <h3>SIG-Sec</h3>
+                </div>
+                <div class="sig-link-card">
+                    <a class="sig-link" href="#">
+                        <!--<img src="">-->
+                    </a>
+                    <h3>SIG-Game</h3>
+                </div>
+                <div class="sig-link-card">
+                    <a class="sig-link" href="#">
+                        <!--<img src="">-->
+                    </a>
+                    <h3>SIG.com</h3>
+                </div>
+                <div class="sig-link-card">
+                    <a class="sig-link" href="#">
+                        <!--<img src="">-->
+                    </a>
+                    <h3>SIG-Lounge</h3>
+                </div>
+                <div class="sig-link-card">
+                    <a class="sig-link" href="#">
+                        <!--<img src="">-->
+                    </a>
+                    <h3>SIG-Tutor</h3>
+                </div>
+            </div>
+        </div>
+{% endblock %} 
+
+{% block body_scripts %}
+        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!--<script>-->
+            <!--(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=-->
+            <!--function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;-->
+            <!--e=o.createElement(i);r=o.getElementsByTagName(i)[0];-->
+            <!--e.src='https://www.google-analytics.com/analytics.js';-->
+            <!--r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));-->
+            <!--ga('create','UA-XXXXX-X','auto');ga('send','pageview');-->
+        <!--</script>-->
+
 {% endblock %}
