--- a/ACM_General/home/templates/home/calendar.html
+++ b/ACM_General/home/templates/home/calendar.html
@@ -11,7 +11,7 @@
 {% block head_stylesheet %}
     {{ block.super }}
 
-    <link rel="stylesheet" href="../css/calendar.css" />
+    <link rel="stylesheet" href="{% static "/home/css/calendar.css" %}" />
 {% endblock %}
 
 {% block body_main %}
