--- a/ACM_General/home/templates/home/base.html
+++ b/ACM_General/home/templates/home/base.html
@@ -16,10 +16,21 @@
 {% endblock %}
 
 {% block head_javascript %}
-    <script src="{% static "/home/js/vendor/modernizr-2.8.3.min.js" %}"></script>
-
-    <script src="{% static "/home/js/main.js" %}"></script>
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
     <script src="{% static "/home/js/plugins.js" %}"></script>
+    <script src="{% static "/home/js/main.js" %}"></script>
+
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <!--<script>-->
+        <!--(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=-->
+        <!--function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;-->
+        <!--e=o.createElement(i);r=o.getElementsByTagName(i)[0];-->
+        <!--e.src='https://www.google-analytics.com/analytics.js';-->
+        <!--r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));-->
+        <!--ga('create','UA-XXXXX-X','auto');ga('send','pageview');-->
+    <!--</script>-->
+
 {% endblock %}
 
 {% block head_fonts %}
@@ -32,7 +43,7 @@
 
             </div>
             <div class="content-wrapper">
-                <a href="#" class="acm-logo-button">
+		    <a href="{% url "home:index" %}" class="acm-logo-button">
 			<img src="{% static "/home/img/acm.png" %}">
                     <h2 class="acm-text">Association for<br>Computing Machinery</h2>
                 </a>
@@ -45,7 +56,7 @@
                 </div>
             </div>
                 <nav>
-                    <a href="#" class="home-nav nav-button">
+			<a href="{% url "home:index" %}" class="home-nav nav-button">
 			    <img src="{% static "home/img/ic_home_black_48dp/web/ic_home_black_48dp_1x.png" %}"/>
                         <h3>HOME</h3>
                     </a>
@@ -78,7 +89,7 @@
         <footer>
             <img src="{% static "home/img/footerimgtrans.png"%}"/>
             <div class="footer-nav">
-                <a href="#">Home</a>
+		<a href="{% url "home:index" %}">Home</a>
 		<a href="{% url "home:sponsors" %}">Sponsors</a>
 		<a href="{% url "home:calendar" %}">Calendar</a>
                 <a href="#">Media</a>
@@ -87,22 +98,3 @@
             <h5>@ 2016 Missouri S&T SIG.com. All rights reserved.</h5>
         </footer>
 {% endblock %}
-
-{% block body_scripts %}
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <!--<script>-->
-            <!--(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=-->
-            <!--function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;-->
-            <!--e=o.createElement(i);r=o.getElementsByTagName(i)[0];-->
-            <!--e.src='https://www.google-analytics.com/analytics.js';-->
-            <!--r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));-->
-            <!--ga('create','UA-XXXXX-X','auto');ga('send','pageview');-->
-        <!--</script>-->
-{% endblock %}
-
-
