--- a/ACM_General/core/templates/core/base.html
+++ b/ACM_General/core/templates/core/base.html
@@ -61,7 +61,7 @@
         {% block body_header %}
         {% endblock %}
 
-        {% block body_main %}
+        {% block body_content %}
         {% endblock %}
 
         {% block body_footer %}
