--- a/ACM_General/home/static/home/css/calendar.css
+++ b/ACM_General/home/static/home/css/calendar.css
@@ -1,531 +1,4 @@
-/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */
-
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
-html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-    margin: 0;
-    padding: 0;
-    font-family: 'Noto Sans', sans-serif;
-    letter-spacing: .01em;
-}
-
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-    vertical-align: middle;
-}
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-    resize: vertical;
-}
-
-/* ==========================================================================
-   Browser Upgrade Prompt
-   ========================================================================== */
-
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-header {
-    width:100%;
-    height: 630px;
-    display: flex;
-    justify-content: center;
-}
-
-.header-background {
-    z-index: 1;
-    position: absolute;
-    height: 566px;
+iframe {
     width: 100%;
-    background-color: #241234;
-}
-
-header .content-wrapper {
-    position:absolute;
-    z-index: 10;
-}
-
-.acm-logo-button {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    height: 80px;
-    width: 260px;
-    margin: 7px 0 0 0;
-}
-.acm-logo-button img {
-    height: 100%;
-    margin-right: 8px;
-}
-
-.acm-logo-button .acm-text {
-    color: #fff;
-    font-weight: normal;
-    text-decoration: none;
-    line-height: 19px;
-    font-size: 16px;
-}
-
-.welcome-section {
-    margin-top: 150px;
-    width:100%;
-    color: #fff;
-    text-decoration: none;
-}
-
-.welcome-section h2 {
-    font-weight: normal;
-    font-size: 32px;
-    margin: 0;
-}
-
-.welcome-section h1 {
-    font-size: 40px;
-    font-weight: normal;
-    line-height: 40px;
-    margin: 4px 0 20px 0;
-}
-
-.welcome-section a {
-    border-radius: 50px;
-    background-color: rgb(231, 102, 82);
-    padding: 11px 22px;
-    font-size: 11px;
-    color: #fff;
-    text-decoration: none;
-}
-nav {
-    margin-top: 520px;
-    position:absolute;
-    z-index: 10;
-    border-radius: 4px;
-    box-shadow: #ECECEC 0 1px 2px 1px;
-    height: 95px;
-    max-width: 1000px;
-    background-color: #fff;
-    display: flex;
-}
-
-.nav-button {
-    position: relative;
-    width: 16.66666666vw;
-    font-size: 8px;
-    text-decoration: none;
-    line-height: 0;
-    color: #888;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.nav-button:first-of-type:after {
-    content:"";
-    background: #fff;
-}
-
-.nav-button:after {
-    content:"";
-    background: #ddd;
-    position: absolute;
-    bottom: 22%;
-    left: 0;
-    height: 55%;
-    width: 1px;
-}
-
-.main-section {
-    padding: 30px 0px;
-    height: auto; 
-}
-
-.gray-section {
-    background-color: #d3d3d3;
-}
-.learn-header {
-    text-align: center;
-}
-
-.learn-header h2 {
-    color: #555;
-    font-size:22px;
-    line-height: 12px;
-}
-
-.learn-header h5 {
-    color: #777;
-    font-size:12px;
-}
-
-.learn-body {
-    margin: auto;
-    max-width: 1400px;
-    display: flex;
-    align-items: center;
-    justify-content:center;
-}
-
-.sig-card {
-    display: flex;
-    flex-direction: column;
-    border-radius: 4px;
-    height:150px;
-    width: 14%;
-    padding-top:120px;
-    margin: 20px 3px;
-    align-items: center;
-    text-align: center;
-    /*box-shadow: #ccc 0 0 3px 1px;*/
-    background-color: white;
-}
-
-/*.sig-card img {*/
-    /**/
-/*}*/
-
-.sig-card h3 {
-    margin: 7px;
-    color: #666;
-    font-size: 16px;
-}
-
-.sig-card p {
-    margin: 0 4px;
-    color: #777;
-    font-size: 13px;
-}
-
-.sig-section {
-    height: 350px;
-    background-color: #21262A;
-}
-
-.sig-section-header h2 {
-    color: #ddd;
-    text-align: center;
-    font-weight: normal;
-    padding: 35px 0 10px 0;
-    font-size: 24px;
-}
-
-.sig-section-body {
-    margin:auto;
-    max-width: 1400px;
-    display: flex;
-    align-items: center;
-    justify-content:center;
-}
-
-.sig-link-card {
-    display: flex;
-    flex-direction: column;
-    width: 12%;
-    margin: 0 22px;
-    height: 100px;
-    align-items: center;
-    text-align: center;
-}
-
-.sig-link {
-    box-shadow: inset #111 0 0 50px -4px;
-    width: 100%;
-    border-radius: 20px;
-    background-color: #1C2023;
-}
-
-.sig-link:before{
-    content:'';
-    padding-top:100%; /* vertical value as  100% equals width */
-    float:left;
-}
-
-.sig-link-card h3 {
-    color: #ddd;
-    font-weight: normal;
-    font-size: 16px;
-}
-
-footer {
-    height: 270px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #251334;
-}
-footer img {
-    margin-top: 5px;
-    height: 125px;
-}
-.footer-nav {
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.footer-nav a {
-    margin: 0 40px;
-    font-size: 14px;
-    text-decoration: none;
-    color: #ddd;
-}
-
-footer h5 {
-    color: #ddd;
-    font-size: 14px;
-    font-weight: normal;
-}
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers
- */
-
-.hidden {
-    display: none !important;
-}
-
-/*
- * Hide only visually, but have it available for screen readers:
- * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-/*
- * Extends the .visuallyhidden class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-/*
- * Hide visually and from screen readers, but maintain layout
- */
-
-.invisible {
-    visibility: hidden;
-}
-
-/*
- * Set content to middle of screen and desired width for content
- */
-
-.content-wrapper {
-    margin: 0 auto;
-    width: 100%;
-    max-width:770px;
-}
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
-
-@media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
-}
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   http://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
-@media print {
-    *,
-    *:before,
-    *:after,
-    *:first-letter,
-    *:first-line {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster:
-                                   http://www.sanbeiji.com/archives/953 */
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    /*
-     * Printing Tables:
-     * http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
+    height: 600px;
 }
