--- a/ACM_General/home/templates/home/calendar.html
+++ b/ACM_General/home/templates/home/calendar.html
@@ -6,20 +6,18 @@
     <title> ACM | Calendar </title>
 {% endblock %}
 
-{% block head_extra-descriptors %}
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+{% block head_stylesheets %}
+<link rel="stylesheet" href="{% static "/home/css/normalize.css" %}" />
+<link rel="stylesheet" href="{% static "/home/css/main.css" %}" />
+<link rel="stylesheet" href="{% static "/home/css/calendar.css" %}" />
+
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
 {% endblock %}
 
-{% block head_stylesheet %}
-    {{ block.super }}
-
-    <link rel="stylesheet" href="{% static "/home/css/calendar.css" %}" />
-{% endblock %}
-
-{% block body_main %}
+{% block body_content %}
     <div class="main-section">
         <div class="content-wrapper">
-            <iframe src="https://calendar.google.com/calendar/embed?src=mst.edu_7u3stm8bn7l2umuastep5fmbl0%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?src=mst.edu_7u3stm8bn7l2umuastep5fmbl0%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 {% endblock %}
