--- a/ACM_General/home/templates/home/sponsors.html
+++ b/ACM_General/home/templates/home/sponsors.html
@@ -3,32 +3,55 @@
 {% load static %}
 
 {% block head_title %}
-    <title> ACM | Sponsors </title>
-{% endblock %}
-
-{% block head_extra-descriptors %}
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+<title> ACM | Sponsors </title>
 {% endblock %}
 
 {% block head_stylesheets %}
-    {{ block.super }}
+<link rel="stylesheet" href="{% static "/home/css/normalize.css" %}" />
+<link rel="stylesheet" href="{% static "/home/css/main.css" %}" />
+<link rel="stylesheet" href="{% static "/home/css/sponsors.css" %}" />
 
-    <link rel="stylesheet" href="{% static "home/css/sponsors.css" %}">
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
 {% endblock %}
 
+{% block body_content %}
+<div class="main-section">
+    <div class="content-wrapper">
+        <h1 style="text-align:center;"> Thank you to everyone one on this list! </h1>
+        <h2 style="text-align:center;"> Contact <a href="mailto:acm@mst.com?Subject=ACM Sponsorship" target="_top">acm@mst.edu</a> to join it!</h2>
 
-{% block body_main %}
-    <div class="sponsors-highlight">
-        <h1 style="text-align:center;"> Interested in Sponsoring? </h1>
-        <h1 style="text-align:center;"> Contact <a href="mailto:acm@mst.com?Subject=ACM Sponsership" target="_top">acm@mst.edu</a> </h1>
+        <div class="hor-bar"></div>
 
-        <div class="content-wrapper">
-            <img src="{% static "home/img/tradebot_logo.png" %}"/>
-	    <img src="{% static "home/img/at&tlogo.jpg" %}"/>
-	    <img src="{% static "home/img/Garmin_Logo_Rgsd_CMKY.jpg" %}"/>
-	    <img src="{% static "home/img/Union_Pacific_Logo.svg.png" %}"/>
-	    <img src="{% static "home/img/Logo_Western_Digital_color.jpg" %}"/>
-	    <img src="{% static "home/img/instt-snl.jpg" %}"/>
+        <div class="sponsor-spots sponsor">
+            <h3>Sponsors</h3>
+            <h4>>$2500</h4>
+            <div class="div-bar"></div>
+            <a href="http://tradebot.com/"><img src="{% static "home/img/tradebot_logo.png" %}"/></a>
+        </div>
+        <!--<div class="sponsor-spots patron">-->
+            <!--<h2>Patrons (>$2000)</h2>-->
+            <!--<div class="div-bar"></div>-->
+        <!--</div>-->
+        <div class="sponsor-spots benefactor">
+            <h3>Benefactors</h3>
+            <h4>>$1500</h4>
+            <div class="div-bar"></div>
+            <a href="http://www.garmin.com"><img src="{% static "home/img/Garmin_Logo_Rgsd_CMKY.jpg" %}"/></a>
+        </div>
+        <!--<div class="sponsor-spots donor">-->
+            <!--<h2>Donors (>$1000)</h2>-->
+            <!--<div class="div-bar"></div>-->
+        <!--</div>-->
+        <div class="sponsor-spots contributor">
+            <h3>Contributors</h3>
+            <h4>>$500</h4>
+            <div class="div-bar"></div>
+            <a href="https://www.up.com"><img src="{% static "home/img/Union_Pacific_Logo.svg.png" %}"/></a>
+            <div class="hor-bar"></div>
+            <a href="https://www.wdc.com"><img src="{% static "home/img/Logo_Western_Digital_color.jpg" %}"/></a>
+            <div class="hor-bar"></div>
+            <a href="http://www.sandia.gov/"><img src="{% static "home/img/instt-snl.jpg" %}"/></a>
         </div>
     </div>
+</div>
 {% endblock %}
