--- a/ACM_General/accounts/templates/accounts/login.html
+++ b/ACM_General/accounts/templates/accounts/login.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="{% static "accounts/css/login.css" %}" />
 {% endblock %}
 
-{% block body_main %}
+{% block body_content %}
 <div class="wrapper">
 
     <div class="card">
