--- a/ACM_General/home/static/home/css/sponsors.css
+++ b/ACM_General/home/static/home/css/sponsors.css
@@ -24,14 +24,25 @@
     justify-content: center;
 }
 
+.donation-header {
+  width:100%;
+  padding-left: 40px;
+}
+
+.donation-content {
+  width:100%;
+}
+
 .main-section .content-wrapper h3 {
-    margin: 16px 0 0 80px;
+  /*padding-left: 40px;*/
+    margin: 16px 0 0 0;
     font-size: 1.4em;
     width: 100%;
 }
 
 .main-section .content-wrapper h4 {
-    margin: 0 0 0 80px;
+    /*padding-left: 40px;*/
+    margin: 0;
     font-size: 1.1em;
     width: 100%;
     color: rgba(0,0,0,.5);
@@ -75,7 +86,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
     background-color: white;
     border-radius: 4px;
     transition: box-shadow .2s;
