--- a/ACM_General/home/templates/home/base.html
+++ b/ACM_General/home/templates/home/base.html
@@ -56,28 +56,28 @@
                 </div>
                 <nav>
                     <a href="{% url "home:index" %}" class="home-nav nav-button">
-                    <img src="{% static "home/img/ic_home_black_48dp/web/ic_home_black_48dp_1x.png" %}"/>
-                    <h3>HOME</h3>
+                      <img src="{% static "home/img/ic_home_black_48dp/web/ic_home_black_48dp_1x.png" %}"/>
+                      <h3>HOME</h3>
                     </a>
                     <a href="{% url "home:sponsors" %}" class="sponsors-nav nav-button">
-                    <img src="{% static "home/img/ic_business_center_black_48dp/web/ic_business_center_black_48dp_1x.png"%}"/>
-                    <h3>SPONSORS</h3>
+                      <img src="{% static "home/img/ic_business_center_black_48dp/web/ic_business_center_black_48dp_1x.png"%}"/>
+                      <h3>SPONSORS</h3>
                     </a>
                     <a href="{% url "home:calendar" %}" class="calendar-nav nav-button">
-                    <img src="{% static "home/img/ic_today_black_48dp/web/ic_today_black_48dp_1x.png"%}"/>
-                    <h3>CALENDAR</h3>
+                      <img src="{% static "home/img/ic_today_black_48dp/web/ic_today_black_48dp_1x.png"%}"/>
+                      <h3>CALENDAR</h3>
                     </a>
-                    <a href="#" class="media-nav nav-button">
+                    <a href="#" class="media-nav nav-button disabled">
                         <img src="{% static "home/img/ic_image_black_48dp/web/ic_image_black_48dp_1x.png"%}"/>
                         <h3>MEDIA</h3>
                     </a>
-                    <a href="#" class="officers-nav nav-button">
+                    <a href="#" class="officers-nav nav-button disabled">
                         <img src="{% static "home/img/ic_recent_actors_black_48dp/web/ic_recent_actors_black_48dp_1x.png" %}"/>
                         <h3>OFFICERS</h3>
                     </a>
                     <a href="{% url "accounts:user-login" %}" class="login-nav nav-button">
-                    <img src="{% static "home/img/ic_account_box_black_48dp/web/ic_account_box_black_48dp_1x.png"%}"/>
-                    <h3>LOGIN</h3>
+                      <img src="{% static "home/img/ic_account_box_black_48dp/web/ic_account_box_black_48dp_1x.png"%}"/>
+                      <h3>LOGIN</h3>
                     </a>
                 </nav>
             </div>
