--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -11,16 +11,18 @@
 {% endblock %}
 
 {% block body_content %}
-	<!--<div class="main-section">-->
-        <!--<div class="content-wrapper">-->
-            <!--<h1>ACM Special Interest Group hosted events:</h1>-->
-            <!--<a href="#" class="full-wide half-high bottom-margin"><img src="#" width="100%" height="100%"></a>-->
-            <!--<div class="full-wide half-high two-wide-wrapper top-margin">-->
-                <!--<a href="#" class="full-high half-wide right-margin"><img src="#" width="100%" height="100%"></a>-->
-                <!--<a href="#" class="full-high half-wide left-margin"><img src="#" width="100%" height="100%"></a>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
+	<div class="main-section">
+        <div class="content-wrapper">
+            <h1>Special Interest Group events:</h1>
+            <div class="non-carousel">
+              <a href="#" class="full-wide half-high bottom-margin"><img src="#" width="100%" height="100%"></a>
+              <div class="full-wide half-high two-wide-wrapper top-margin">
+                  <a href="#" class="full-high half-wide right-margin"><img src="#" width="100%" height="100%"></a>
+                  <a href="#" class="full-high half-wide left-margin"><img src="#" width="100%" height="100%"></a>
+              </div>
+            </div>
+        </div>
+    </div>
     <div class="sig-section">
         <div class="sig-section-header">
             <h2>Check out the Special Interest Groups on their Websites.</h2>
@@ -45,7 +47,7 @@
                 <h3>SIG-Sec</h3>
             </div>
             <div class="sig-link-card">
-                <a class="sig-link" href="http://docs.megaminerai.com/">
+                <a class="sig-link" href="http://siggame.io/blog/">
                     <!--<img src="">-->
                 </a>
                 <h3>SIG-Game</h3>
@@ -70,4 +72,4 @@
             <!--</div>-->
         </div>
     </div>
-{% endblock %} 
+{% endblock %}
