--- a/ACM_General/home/templates/home/sponsors.html
+++ b/ACM_General/home/templates/home/sponsors.html
@@ -17,52 +17,89 @@
 {% block body_content %}
 <div class="main-section">
     <div class="content-wrapper">
-        <h1 style="text-align:center;"> Thank you to everyone one on this list! </h1>
+        <h1 style="text-align:center;"> Thank you to our sponsors! </h1>
         <h2 style="text-align:center;"> Contact <a href="mailto:acm@mst.com?Subject=ACM Sponsorship" target="_top">acm@mst.edu</a> to join it!</h2>
 
         <div class="hor-bar"></div>
 
-        <div class="sponsor-spots sponsor">
-          <div class="donation-header">
-            <h3>Sponsors</h3>
-            <h4>>$2500</h4>
-          </div>
-          <div class="donation-content">
-            <div class="div-bar"></div>
-            <a href="http://tradebot.com/"><img src="{% static "home/img/tradebot_logo.png" %}"/></a>
-          </div>
-        </div>
-        <!--<div class="sponsor-spots patron">-->
-            <!--<h2>Patrons (>$2000)</h2>-->
-            <!--<div class="div-bar"></div>-->
-        <!--</div>-->
-        <div class="sponsor-spots benefactor">
-          <div class="donation-header">
-            <h3>Benefactors</h3>
-            <h4>>$1500</h4>
-          </div>
-          <div class="donation-content">
-            <div class="div-bar"></div>
-            <a href="http://www.garmin.com"><img src="{% static "home/img/Garmin_Logo_Rgsd_CMKY.jpg" %}"/></a>
-        </div>
-      </div>
-        <!--<div class="sponsor-spots donor">-->
-            <!--<h2>Donors (>$1000)</h2>-->
-            <!--<div class="div-bar"></div>-->
-        <!--</div>-->
-        <div class="sponsor-spots contributor">
-          <div class="donation-header">
-            <h3>Contributors</h3>
-            <h4>>$500</h4>
-          </div>
-          <div class="donation-content">
-            <div class="div-bar"></div>
-            <a href="https://www.up.com"><img src="{% static "home/img/Union_Pacific_Logo.svg.png" %}"/></a>
-            <div class="hor-bar"></div>
-            <a href="https://www.wdc.com"><img src="{% static "home/img/Logo_Western_Digital_color.jpg" %}"/></a>
-            <div class="hor-bar"></div>
-            <a href="http://www.sandia.gov/"><img src="{% static "home/img/instt-snl.jpg" %}"/></a>
-          </div>
+        <div class="big-boy-spot">
+
+            <div class="card-wrapper">
+                <div class="sponsors-card">
+
+                    <div class="sponsors-content">
+                        <img src="{% static "home/img/tradebot-squarelogo.png" %}"/>
+                    </div>
+
+                    <div class="sponsors-header">
+                        <h3>Tradebot</h3>
+                        <h4>Sponsor</h4>
+                    </div>
+
+                    <div class="sponsors-links">
+                        <a href="http://www.tradebot.com/">LEARN MORE</a>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="card-wrapper">
+                <div class="sponsors-card">
+
+                    <div class="sponsors-content">
+                        <img src="{% static "home/img/garmin-squarelogo.png" %}"/>
+                    </div>
+
+                    <div class="sponsors-header">
+                        <h3>Garmin</h3>
+                        <h4>Sponsor</h4>
+                    </div>
+
+                    <div class="sponsors-links">
+                        <a href="http://www.garmin.com/">LEARN MORE</a>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="card-wrapper">
+                <div class="sponsors-card">
+
+                    <div class="sponsors-content">
+                        <img src="{% static "home/img/garmin-squarelogo.png" %}"/>
+                    </div>
+
+                    <div class="sponsors-header">
+                        <h3>AT&T</h3>
+                        <h4>Donor</h4>
+                    </div>
+
+                    <div class="sponsors-links">
+                        <a href="http://www.garmin.com/">LEARN MORE</a>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="card-wrapper">
+                <div class="sponsors-card">
+
+                    <div class="sponsors-content">
+                        <img src="{% static "home/img/Union_Pacific_Logo.svg.png" %}"/>
+                    </div>
+
+                    <div class="sponsors-header">
+                        <h3>Union Pacific</h3>
+                        <h4>Contributor</h4>
+                    </div>
+
+                    <div class="sponsors-links">
+                        <a href="http://www.garmin.com/">LEARN MORE</a>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
