--- a/ACM_General/home/static/home/css/main.css
+++ b/ACM_General/home/static/home/css/main.css
@@ -18,8 +18,8 @@ html {
     line-height: 1.4;
     margin: 0;
     padding: 0;
-    font-family: 'Noto Sans', sans-serif;
-    letter-spacing: .01em;
+    font-family: 'Roboto', sans-serif;
+    /*letter-spacing: .02em;*/
 }
 
 /*
