--- a/ACM_General/home/templates/home/base.html
+++ b/ACM_General/home/templates/home/base.html
@@ -33,7 +33,8 @@
 {% endblock %}
 
 {% block head_fonts %}
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet" />-->
 {% endblock %}
 
 {% block body_header %}
