[UPDATE] Started implementing ACM Membership page + added FontAwesome

--- a/ACM_General/payments/templates/payments/payment.html
+++ b/ACM_General/payments/templates/payments/payment.html
@@ -29,7 +29,7 @@
                         data-amount="1100"
                         data-name="Missouri S&amp;T - Association of Computing Machinery"
                         data-description="Widget"
-                        data-image="{% static 'home/img/acm.png' %}"
+                        data-image="{% static 'home/img/core/acm.png' %}"
                         data-locale="auto">
                     </script>
                 </form>
