--- a/ACM_General/payments/templates/payments/acm_membership.html
+++ b/ACM_General/payments/templates/payments/acm_membership.html
@@ -19,13 +19,22 @@
 <div class="body-wrapper">
     <div class="card">
         <div class="logo"></div>
-        <div class="payment-wrapper">
-            {% for product in products %}
-            <div class="payment-container">
-                {{product.name}}
-            </div>
-            {% endfor %}
-        </div>
+        <div class="title">ACM Membership</div>
+        {% for product in products %}
+        <h3> {{ product.name }} </h3>
+        <p> Cost: {{ product.cost }} </p>
+        <form action="{% url "payments:product-handler" product.id %}" method="POST">
+            {% csrf_token %}
+            <script
+                src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                data-key="pk_test_0FfWE5qxj6yqPUHQU1noRevQ"
+                data-name="Missouri S&amp;T - Association of Computing Machinery"
+                data-description="Widget"
+                data-image="{% static 'home/img/core/acm.png' %}"
+                data-locale="auto">
+            </script>
+        </form>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
