--- a/ACM_General/events/templates/events/listEvents.html
+++ b/ACM_General/events/templates/events/listEvents.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 
-{% block body_main %}
+{% block body_content %}
     <p> Current Time is {{ currentTime }} </p>
     <h1> Current Events </h1>
     <ul>
