--- a/ACM_General/payments/templates/payments/acm_membership.html
+++ b/ACM_General/payments/templates/payments/acm_membership.html
@@ -27,7 +27,7 @@
             {% csrf_token %}
             <script
                 src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                data-key="pk_test_0FfWE5qxj6yqPUHQU1noRevQ"
+                data-key="{{ stripe_public_key }}"
                 data-name="Missouri S&amp;T - Association of Computing Machinery"
                 data-description="Widget"
                 data-image="{% static 'home/img/core/acm.png' %}"
