--- a/ACM_General/events/templates/events/listEvents.html
+++ b/ACM_General/events/templates/events/listEvents.html
@@ -1,6 +1,6 @@
-{% extends "core/base.html" %}
+{% extends "base.html" %}
 
-{% block body_content %}
+{% block body_main %}
     <p> Current Time is {{ currentTime }} </p>
     <h1> Current Events </h1>
     <ul>
