--- a/ACM_General/home/templates/home/base.html
+++ b/ACM_General/home/templates/home/base.html
@@ -15,6 +15,7 @@
 
 {% block head_javascript %}
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <!--<script type="text/javascript" charset="utf-8" src="{% static "/home/js/jquery.leanModal.min.js" %}"></script>-->
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
     <script src="{% static "/home/js/plugins.js" %}"></script>
     <script src="{% static "/home/js/main.js" %}"></script>
@@ -101,13 +102,13 @@
                         <img src="{% static "home/img/core/officers-icon.png" %}"/>
                         <h3>OFFICERS</h3>
                     </a>
-                    <a href="{% url "accounts:user-login" %}" class="login-nav nav-button">
+                    <a href="{% url "thirdparty_auth:login" "oauth2" "google" %}" class="login-nav nav-button" id="modaltrigger">
                       <img src="{% static "home/img/core/login-icon.png"%}"/>
                       <h3>LOGIN</h3>
                     </a>
+
                 </nav>
             </div>
-
         </header>
 {% endblock %}
 
@@ -115,9 +116,9 @@
         <footer>
             <img src="{% static "home/img/core/footerimgtrans.png"%}"/>
             <div class="footer-nav">
-		<a href="{% url "home:index" %}">Home</a>
-		<a href="{% url "home:sponsors" %}">Sponsors</a>
-		<a href="{% url "home:calendar" %}">Calendar</a>
+                <a href="{% url "home:index" %}">Home</a>
+                <a href="{% url "home:sponsors" %}">Sponsors</a>
+                <a href="{% url "home:calendar" %}">Calendar</a>
                 <a href="#">Media</a>
                 <a href="#">Officers</a>
             </div>
